# serializer version: 1
# name: test_add_application
  b'{"applications":["harp_apps.storage"],"storage":{"url":"sqlite+aiosqlite:///:memory:?cache=shared","migrate":true,"blobs":{"type":"sql"}}}'
# ---
# name: test_add_application.1
  dict({
    'applications': list([
      'harp_apps.storage',
      'foo.bar',
    ]),
    'storage': dict({
      'blobs': dict({
        'type': 'sql',
      }),
      'migrate': True,
      'url': 'sqlite+aiosqlite:///:memory:?cache=shared',
    }),
  })
# ---
# name: test_add_application.2
  b'{"applications":["harp_apps.storage","foo.bar"],"storage":{"url":"sqlite+aiosqlite:///:memory:?cache=shared","migrate":true,"blobs":{"type":"sql"}}}'
# ---
